--- a/src/sass/_index_header.sass
+++ b/src/sass/_index_header.sass
@@ -43,3 +43,6 @@
 					border-bottom: solid 10px #242424
 				&:active
 					border-bottom: solid 10px white
+				a
+					text-decoration: none
+					color: white
