--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,6 @@
+@import 'index_body'
+@import 'index_button'
 @import 'index_header'
 @import 'index_main'
 @import 'index_main_features'
+@import 'index_sections-news_and_gallery'
