--- a/src/sass/_index_main_features.sass
+++ b/src/sass/_index_main_features.sass
@@ -1,14 +1,29 @@
 .main-container__features
 	width: 940px
 	margin: auto
+	margin-top: 0px
+	padding-top: 60px
 	color: white
 	text-align: center
+	font-family: "PT Sans", sans-serif
 	&__logo
 	&__list
+		padding: 0px
 		list-style: none
-
+		display: flex
+		flex-direction: row
+		justify-content: space-between
 		&__item
+			width: 250px
 			h3
+				font-size: 30px
+				font-weight: 400
+				line-height: 42px
+				margin-top: 60px
+				margin-bottom: 0px
+			span
+				font-size: 30px
 			p
-.visually-hidden
-	display: none
+				font-size: 14px
+				font-weight: 400
+				line-height: 24px
