--- a/src/sass/_index_sections-news_and_gallery.sass
+++ b/src/sass/_index_sections-news_and_gallery.sass
@@ -40,5 +40,29 @@
 		padding-left: 34px
 		padding-right: 34px
 .main-container__gallery
+	width: 390px
+	margin-top: 50px
 	&__title
+		margin-top: 0px
+		margin-bottom: 40px
+		font-size: 30px
+		font-weight: 700
+		line-height: 42px
 	&__content
+		margin: 0px
+	div
+		margin-bottom: 55px
+		width: 300px
+		max-height: 200px
+	&__button
+		cursor: pointer
+		font-family: "PT Sans", sans-serif
+		border: 0px
+	.prev
+		margin-right: 4px
+		margin-bottom: 50px
+	.next
+		margin-left: 4px
+		margin-bottom: 50px
+
+
