--- a/src/sass/_index_button.sass
+++ b/src/sass/_index_button.sass
@@ -1,8 +1,10 @@
 .button
 	background-color: #000000
+	cursor: pointer
+	width: 145px
 	padding-top: 17px
 	padding-bottom: 17px
 	color: #faf7f4
-	font-size: 14px
+	font-size: 12px
 	font-weight: 700
 	line-height: 24px
