--- a/src/sass/_index_main.sass
+++ b/src/sass/_index_main.sass
@@ -1,5 +1,5 @@
 .main-container
-	background: url(../img/background.jpg) center no-repeat
+	background: url(../img/background.jpg) center repeat
 	width: 100%
 // .visually-hidden
 // 	position: absolute
