--- a/src/sass/_index_sections-news_and_gallery.sass
+++ b/src/sass/_index_sections-news_and_gallery.sass
@@ -1,4 +1,4 @@
-.sections-news_and_gallery
+.section-news_and_gallery
 	background: #f6f3f0
 	width: 940px
 	min-height: 419px
@@ -12,12 +12,13 @@
 	max-width: 390px
 	margin-left: 80px
 	margin-top: 50px
+	margin-bottom: 50px
 	padding-right: 36px
 	border-right: 3px outset
 	&__title
 		margin-top: 0px
 		margin-bottom: 33px
-		font-size: 30px
+		font-size: 25px
 		font-weight: 700
 		line-height: 42px
 	&__list
@@ -35,17 +36,16 @@
 				margin-bottom: 29px
 	a
 		display: inline-block
-		margin-bottom: 50px
 		text-decoration: none
 		padding-left: 34px
 		padding-right: 34px
 .main-container__gallery
 	width: 390px
-	margin-top: 50px
+	margin: 50px 0px 50px 90px
 	&__title
 		margin-top: 0px
 		margin-bottom: 40px
-		font-size: 30px
+		font-size: 25px
 		font-weight: 700
 		line-height: 42px
 	&__content
@@ -60,9 +60,7 @@
 		border: 0px
 	.prev
 		margin-right: 4px
-		margin-bottom: 50px
 	.next
 		margin-left: 4px
-		margin-bottom: 50px
 
 
