--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -4,3 +4,4 @@
 @import 'index_main'
 @import 'index_main_features'
 @import 'index_sections-news_and_gallery'
+@import 'index_section-contacts_and_appointment'
