--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,3 +5,4 @@
 @import 'index_main_features'
 @import 'index_sections-news_and_gallery'
 @import 'index_section-contacts_and_appointment'
+@import 'index_main_form'
