section-contacts_and_appointment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -84,7 +84,8 @@ body {
 
 .main-container {
   background: url(../img/background.jpg) center repeat;
-  width: 100%; }
+  width: 100%;
+  padding-bottom: 65px; }
 
 .main-container__features {
   width: 940px;
@@ -235,8 +236,46 @@ body {
     text-decoration: none;
     font-weight: 700;
     line-height: 24px;
-    text-align: center; }
+    text-align: center;
+    margin-right: 7px; }
 
 .main-container__appointment {
-  width: 330px;
+  width: 300px;
   margin: 50px 0px 50px 90px; }
+  .main-container__appointment__title {
+    margin: 0px;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 42px; }
+  .main-container__appointment__info {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 35px 0px 16px 0px; }
+
+.index-main_form {
+  width: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -ms-flex-flow: wrap;
+  flex-flow: wrap; }
+  .index-main_form__label {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 16px 0px 14px 17px; }
+  .index-main_form__input {
+    width: 140px;
+    height: 43px;
+    border: 3px solid black;
+    margin: 16px 0px 14px 0px; }
+  .index-main_form__submit {
+    border: 0px;
+    width: 300px; }
+
+.main-footer {
+  background: #252525; }
