--- a/src/sass/_index_main.sass
+++ b/src/sass/_index_main.sass
@@ -1,6 +1,7 @@
 .main-container
 	background: url(../img/background.jpg) center repeat
 	width: 100%
+	padding-bottom: 65px
 // .visually-hidden
 // 	position: absolute
 // 	width: 1px
