--- a/src/sass/_index_section-contacts_and_appointment.sass
+++ b/src/sass/_index_section-contacts_and_appointment.sass
@@ -31,6 +31,17 @@
 		font-weight: 700
 		line-height: 24px
 		text-align: center
+		margin-right: 7px
 .main-container__appointment
-	width: 330px
+	width: 300px
 	margin: 50px 0px 50px 90px
+	&__title
+		margin: 0px
+		font-size: 25px
+		font-weight: 700
+		line-height: 42px
+	&__info
+		font-size: 14px
+		font-weight: 700
+		line-height: 24px
+		margin: 35px 0px 16px 0px
