--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -6,3 +6,4 @@
 @import 'index_sections-news_and_gallery'
 @import 'index_section-contacts_and_appointment'
 @import 'index_main_form'
+@import 'index_footer'
