--- a/src/sass/_index_footer.sass
+++ b/src/sass/_index_footer.sass
@@ -1,2 +1,49 @@
-.main-footer
+.index-footer
 	background: #252525
+	color: white
+.main-footer
+	width: 940px
+	margin: auto
+	padding-top: 62px
+	padding-bottom: 43px
+	display: flex
+	justify-content: space-between
+	&__info
+		margin-top: 0px
+		font-size: 14px
+		font-weight: 700
+		line-height: 24px
+		a
+			color: white
+	&__social
+		text-align: center
+		&__title
+			font-size: 14px
+			font-weight: 700
+			line-height: 24px
+			margin-bottom: 20px
+		&__list
+			list-style: none
+			padding-inline-start: 0px
+			margin-block-end: 0px
+			margin-block-start: 0px
+			margin-top: 30px
+			li
+				display: inline-block
+				a
+					text-decoration: none
+					color: white
+					padding: 10px
+					background: black
+	&__copyright
+		margin: 0px
+		text-align: center
+		span
+			font-size: 14px
+			font-weight: 700
+			line-height: 24px
+			display: inline-block
+			margin-bottom: 30px
+		a
+			text-decoration: none
+			padding: 10px 20px 10px 20px
